git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@443 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hibernate/README
+++ b/hibernate/README
@@ -5,7 +5,7 @@ Object [[persistence]] and [[O/R mapping]] with [[Technology:Hibernate]]
 == Languages ==
 
 * [[Language:XML]]
-* Java
+* [[Language:Java]]
 
 == Technologies ==
 * [[Technology:Hibernate]: Hibernate jars 
