git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@449 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hibernate/README
+++ b/hibernate/README
@@ -8,7 +8,7 @@ Object [[persistence]] and [[O/R mapping]] with [[Technology:Hibernate]]
 * [[Language:Java]]
 
 == Technologies ==
-* [[Technology:Hibernate]: Hibernate jars 
+* [[Technology:Hibernate]]: Hibernate jars 
 * [[Technology:javac]]: Java compiler (Version 1.6)
 * [[Technology:JDK]]: provider of javac et al.
 * [[Technology:JSE]]: execution platform (Version 1.6)
@@ -23,10 +23,9 @@ Object [[persistence]] and [[O/R mapping]] with [[Technology:Hibernate]]
 
 == Motivation == 
 
-We apply a basic style of [[OO programming]]. A [[object model]] for [[101feature:Company|companies]] is provided, 
-as well as classes to [[101feature:Total|total]] and [[101feature:Cut|cut]] salaries.
-Instances of this model are [[Persistence|persisted]] by making use of [[Technology:Hibernate]]. 
-To that end the [[O/R mapping]] is realized by making use of [[Language:XML]]-mapping files both for departments and employees. 
+An [[object model]] for [[101feature:Company|companies]] is provided, as well as classes to [[101feature:Total|total]] and [[101feature:Cut|cut]] salaries.
+This is, we apply a basic style of [[OO Programming]]. Instances the company model are [[Persistence|persisted]] by making use of the [[Technology:Hibernate]]
+technology. To that end the [[O/R mapping]] is realized by making use of [[Language:XML]]-mapping files both for departments and employees. 
 
 == Architecture ==
 
