git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@451 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hibernate/README
+++ b/hibernate/README
@@ -6,6 +6,7 @@ Object [[persistence]] and [[O/R mapping]] with [[Technology:Hibernate]]
 
 * [[Language:XML]]
 * [[Language:Java]]
+* [[Language:SQL]]
 
 == Technologies ==
 * [[Technology:Hibernate]]: Hibernate jars 
