--- a/hibernate/README
+++ b/hibernate/README
@@ -47,10 +47,10 @@ Hibernate configuration files (see below) can be found in the project's root fol
 * Build the project with Eclipse.
 (The following steps are explained in detail below.)
 * Start the HSQL database server.
-* Run org/softlang/Main.java to create tables.
+* Run org/softlang/Init.java to create tables.
 * Run the database monitor and populate the tables with scripts/PopulateTables.
 * Patch hibernate.cfg.xml to disable "drop and re-recreate".
-* Run org/softlang/Main.java again.
+* Run org/softlang/Tests.java again.
 
 
 '''How to start the database server:'''
@@ -62,10 +62,8 @@ Hibernate configuration files (see below) can be found in the project's root fol
 You can also go to the root dir and run a "make start-db".
 
 
-'''How to run org/softlang/main.java:'''
-* Comment out lines 13-31 
+'''How to run org/softlang/Init.java:'''
 * Run to create new tables
-* Undo the first step
 
 
 '''How and why to start the database monitor:'''
@@ -95,7 +93,7 @@ Hence the line should be commented out.
 
 '''How to cut and total:'''
 
-* Run org/softlang/Main.java again. It will demonstrate the use of Cut and Total.
+* Run org/softlang/Tests.java. It will demonstrate and test the use of Cut and Total.
 
 == Contributors ==
 
