git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@465 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hibernate/README
+++ b/hibernate/README
@@ -94,7 +94,7 @@ Hence the line should be commented out.
 
 '''How to test:'''
 
-* Run org/softlang/Tests.java.
+* Run org/softlang/hibernate/Tests.java.
 
 == Contributors ==
 
