git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@467 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hibernate/README
+++ b/hibernate/README
@@ -65,7 +65,7 @@ You can also go to the root dir and run a "make start-db".
 
 
 '''How to create new tables:'''
-* Run ''Init.java'' in ''org.softlang.hibernate''
+* Run ''Init.java'' in ''org.softlang.hibernate''.
 
 
 '''How and why to start the database monitor:'''
