--- a/hibernate/README
+++ b/hibernate/README
@@ -38,9 +38,9 @@ technology. To that end the [[O/R mapping]] is realized by making use of [[Langu
 
 Package ''org.softlang.om'' holds the java object model for [[101feature:Company|companies]] and the xml-mapping files.
 ''org.softlang.hibernate'' provides functionality to [[101feature:Total|total]] and [[101feature:Cut|cut]] salaries. 
-This package also hosts Init.java to create tables, test cases (see below),
-and HibernateConnectivity to easily load and save company objects. This class uses the SessionFactory provided by HibernateUtil in ''org.softlang.util''.
-The folder ''scripts'' contains sql-scripts for demo purposes, extracted from the hibernate log. 
+This package also hosts ''Init.java'' which tells hibernate to create tables; also test cases (see below) and
+and ''HibernateConnectivity.java'' to easily load and save company objects. This class uses the ''SessionFactory'' provided by ''HibernateUtil.java'' in ''org.softlang.util''.
+The folder ''scripts'' contains sql-scripts to create tables (extracted from the hibernate log), populate data and to drop tables.
 Hibernate configuration files (see below) can be found in the project's root folder.
 
 == Usage ==
