git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@489 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hibernate/README
+++ b/hibernate/README
@@ -14,7 +14,8 @@ That is, this project's object model is mapped to a relational schema, which use
 * [[Language:SQL]]
 
 == Technologies ==
-* [[Technology:Hibernate]]: Hibernate jars 
+* [[Technology:Hibernate]]: Hibernate Framework
+* [[Technology:HSQLDB]]: Hibernate [:Category:Database management system|DBMS]
 * [[Technology:javac]]: Java compiler (Version 1.6)
 * [[Technology:JDK]]: provider of javac et al.
 * [[Technology:JSE]]: execution platform (Version 1.6)
