--- a/hibernate2/README
+++ b/hibernate2/README
@@ -16,10 +16,12 @@ That is, this project's object model is mapped to a relational schema, which rep
 * [[Language:SQL]]
 
 == Technologies ==
-* [[Technology:Hibernate]]: Hibernate jars 
+* [[Technology:Hibernate]]: Hibernate Framework
+* [[Technology:HSQLDB]]: Hibernate [:Category:Database management system|DBMS]
 * [[Technology:javac]]: Java compiler (Version 1.6)
 * [[Technology:JDK]]: provider of javac et al.
 * [[Technology:JSE]]: execution platform (Version 1.6)
+* [[Technology:JUnit]]: automated testing support (Version 4)
 * [[Technology:Eclipse]]: optional IDE (Version 3.4.1)
 
 == Features ==
